--- a/ex1/index.html
+++ b/ex1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="https://unpkg.com/vue/dist/vue.js"></script>
+  <script src="node_modules/vue/dist/vue.js"></script>
 </head>
 <body>
   <div id="app">
